--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,30 @@ body {
 }
 
 .card {
+    transition: 0.5s;
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    right: 0;
+    transform: translate(0, 0);
+    z-index: 2;
     background-color: #c2ac7a !important;
-    color: rgb(255, 255, 255);
+    transition: all ease-in-out 1s;
+}
+
+.card::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    right: 0;
+    background-color: #c2ac7a !important;
+    z-index: 2;
+    transition: all ease-in-out 1s;
 }
 
 .card:hover {
@@ -21,4 +43,14 @@ body {
     border-color: #e6ce96;
     cursor: pointer;
     transition: all ease-in-out 0.5s;
+}
+
+.card:hover::before {
+    width: 1%;
+    cursor: pointer;
+}
+
+.card:hover::after {
+    width: 1%;
+    cursor: pointer;
 }
